Refactor to listen for /timer as base path

--- a/src/static/components/componentSelector.html
+++ b/src/static/components/componentSelector.html
@@ -9,7 +9,7 @@
 {{ block "component" . }}
 		<form 
 			id="component-swap-form-{{.}}"
-			hx-post="/swap-component"
+			hx-post="/timer/swap-component"
 			hx-target="#component-container"
 			hx-swap="innerHTML"
 			hx-indicator="#component-indicator"
