Fixed bug when timer ended

--- a/src/static/components/timer.html
+++ b/src/static/components/timer.html
@@ -173,7 +173,7 @@
 		class="bg-gradient-to-bl from-[#08bf4f] from-7% via-[#4e89a8] via-45% to-[#d47eff] to-90% rounded-full p-px pb-0.5">
 			<button 
 				hx-post="/timer/pause"
-				hx-trigger="click, timerEnded from:body"
+				hx-trigger="click"
 				hx-target="#timer-component"
 				hx-swap="outerHTML"
 			class="w-full px-4 py-2 text-lg text-white font-semibold rounded-full z-10 bg-[#261d44] hover:bg-[#221940] focus:outline-none focus:bg-[#1d153c]">
