--- a/src/static/css/output.css
+++ b/src/static/css/output.css
@@ -570,8 +570,8 @@ video {
 
 .htmx-indicator {
   visibility: hidden;
-  transition: visibility 300ms ease-in;
-  transition-delay: 300ms;
+  transition: opacity 500ms, visibility 500ms ease-in !important;
+  transition-delay: 500ms !important;
 }
 
 .htmx-request .htmx-indicator {
@@ -646,6 +646,10 @@ video {
   width: 4rem;
 }
 
+.w-48 {
+  width: 12rem;
+}
+
 .w-6 {
   width: 1.5rem;
 }
@@ -659,10 +663,6 @@ video {
   width: max-content;
 }
 
-.w-48 {
-  width: 12rem;
-}
-
 .translate-x-\[-50\%\] {
   --tw-translate-x: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -671,10 +671,6 @@ video {
 .translate-y-\[-50\%\] {
   --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.grid-flow-row {
-  grid-auto-flow: row;
 }
 
 .grid-cols-1 {
@@ -687,10 +683,6 @@ video {
 
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-
-.grid-rows-1 {
-  grid-template-rows: repeat(1, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -808,16 +800,16 @@ video {
   --tw-gradient-to-position: 90%;
 }
 
-.p-px {
-  padding: 1px;
-}
-
 .p-0 {
   padding: 0px;
 }
 
 .p-0\.5 {
   padding: 0.125rem;
+}
+
+.p-px {
+  padding: 1px;
 }
 
 .px-12 {
@@ -890,16 +882,6 @@ video {
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
-}
-
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
 }
 
 .text-xl {
